# structured-lightweight-authoring-protocol

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md  debug.py  debug_ast.py  debug_code.py  debug_parser.py  debug_styles.py  debug_test.py  format_converters_summary.txt  pyproject.toml  pytest_output.txt  requirements-dev.txt  setup.py
.cursor/rules/: .cursorrules  python-best-practices.mdc
_memory_bank/: activeContext.md  lessonsLearned.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md  temporalArchive.md  temporalIndex.md
docs/: README.md  formatting.md  genesis.md  indento.md  plan.md  sequence.md
examples/: demo.nmc
scripts/: profile_bottlenecks.py
spec/: GRAMMAR.md  NOMENIC-CORE.md  TOKEN-SCHEMA.nmc
src/: nomenic_cli.py
src/nomenic/: README.md  __init__.py  ast.py  errors.py  lexer.py  parser.py  tokens.py
src/nomenic/cli/: README.md  __init__.py  install.py  main.py
src/nomenic/converters/: __init__.py  base.py  json.py  markdown.py  yaml.py
src/nomenic/debug/: README.md  __init__.py  core.py  file_utils.py  parser_utils.py  style_utils.py  token_utils.py
src/nomenic/extensions/: base.py
src/nomenic/renderers/: __init__.py  html.py  json.py  markdown.py  yaml.py
src/nomenic/validation/: schema.py
tests/: README.md  conftest.py
tests/benchmarks/: performance_benchmarks.py
tests/benchmarks/benchmark_data/: benchmark_1000.nmc  benchmark_10000.nmc  benchmark_100000.nmc  benchmark_2000.nmc  benchmark_500.nmc  benchmark_5000.nmc
tests/extensions/: test_base.py
tests/fixtures/: invalid.nmc  sample.nmc
tests/fuzz/: __init__.py  test_fuzz.py
tests/integration/cli/: convert_test.py
tests/unit/: test_errors.py  test_lexer.py  test_parser.py  test_parser_edge_cases.py  test_parser_errors.py  test_parser_validation.py  test_tokens.py
tests/unit/converters/: base_test.py  test_converter_integration.py  test_json_converter.py  test_markdown_converter.py  test_yaml_converter.py
tests/unit/debug/: test_core.py  test_token_utils.py
tests/unit/renderers/: test_html_visitor.py  test_json_visitor.py  test_renderers.py  test_yaml_visitor.py
tests/validation/: test_schema.py
